[project]
name = "dgl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "ogb>=1.3.6",
    "scikit-learn>=1.6.1",
    "torch==2.6.0",
    "torchmetrics>=1.6.2",
]

[tool.black]

line-length = 80
